--- a/src/pages/main/Main.module.scss
+++ b/src/pages/main/Main.module.scss
@@ -1,6 +1,9 @@
 @import "@/shared/styles";
 
 .container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 0 5.6rem;
   background-color: $grey;
 }
