--- a/src/entities/track/ui/Track.module.scss
+++ b/src/entities/track/ui/Track.module.scss
@@ -65,11 +65,15 @@
 
   &__tools {
     display: flex;
-    padding: 1.7rem 0 1.2rem;
+    padding: 1.6rem 0 1.2rem;
+  }
+
+  &__time {
+    color: $text-secondary;
   }
 
   &__more {
-    padding: 0 2px 0 1.2rem;
+    padding: 1px 2px 0 1.4rem;
   }
 
   audio {
